Wed Jan  5 12:49:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_initialize): Thread objects cannot be initialized
	  again.  fixed: [ruby-core:04067]

Wed Jan  5 02:30:11 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (init_by_array): imported from mt19937ar-cok.tgz.
	  (genrand_int32): ditto.
	  (genrand_real): replaced with genrand_res53 in mt19937ar-cok.
	  (rand_init): support bignum for longer seed.
	  (random_seed): generate longer seed.
	  (make_mask): new function.
	  (limited_rand): ditto.
	  (limited_big_rand): ditto.
	  (rb_f_rand): call limited_rand and limited_big_rand.
	  [ruby-dev:25403]

Tue Jan  4 21:25:43 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/{test_drbssl.rb,test_drbunix.rb,ut_drb.rb}: use
	  DRbService.ext_service. reduce sleep.

Mon Jan  3 14:01:54 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (random_seed): don't use /dev/urandom if it is not
	  character device.

Mon Jan  3 11:37:42 2005  Tanaka Akira  <akr@m17n.org>

	* random.c (random_seed): use /dev/urandom if available.
	  [ruby-dev:25392]

Mon Jan  3 11:03:37 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/test_drb.rb: move TestDRbReusePort to new file.
	  [ruby-dev:25238]

	* test/drb/drbtest.rb: change timeout.

	* test/drb/ignore_test_drb.rb: new file.

Mon Jan  3 07:27:46 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpauth/htpasswd.rb (WEBrick::Htpasswd#reload):
	  raise NotImplementedError if password is encrypted by digest
	  algorithms. This patch is contributed by sheepman. [ruby-list:40467]

	* lib/webrick/httpauth/digestauth.rb
	  (WEBrick::HTTPAuth::DigestAuth#_authenticate): fix digest calculation.
	  This patch is contributed by sheepman. [ruby-list:40482]

	* lib/webrick/{httpauth.rb,httpauth/basicauth.rb,httpproxy.rb}: use
	  pack/unpack-template char "m" instead of lib/base64.rb to do base64
	  encoding/decoding. fixed: [ruby-dev:25336]

	* test/webrick/test_httpauth.rb: new file.
